--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         /*   Aqui estamos setando as variáveis que precisamos para guardar os dados que nosso programa irá utilizar. Variáveis são basicamente recipientes para valores (como números, ou strings ou textos). Variáveis são criadas com a palavra-chave var seguida de um nome para sua variável. Você pode atribuir um valor para sua variável com um sinal de igual (=) seguido do valor que você quer dar a ela.
         À primeira variável — numeroAleatorio — é atribuído um número aleatório entre 1 e 100, calculado usando um algoritmo matemático.  */
 
+        //As últimas duas variáveis (contagemPalpites e botaoReinicio) são usadas para armazenar a contagem dos palpites do usuário, e o outro é uma referência para o botão de reset, que não existe ainda (mas irá existir).
+
          var numeroAleatorio= Math.floor(Math.random() * 100) + 1;
 
          var palpites = document.querySelector('.palpites');
@@ -24,5 +26,17 @@
          var botaoReinicio;
 
     </script>
+
+ <!-- As próximas três variáveis são criadas para guardar uma referência para os parágrafos resultantes em nosso HTML, e são usadas para inserir valores nos parágrafos no código. -->
+
+     <p class="palpites"></p>
+     <p class="ultimoResultado"></p>
+     <p class="baixoOuAlto"></p>
+
+<!-- As próximas duas variáveis armazenam referências para o campo de texto e o botão de envio, são usados para controlar o envio do palpite. -->
+
+<label for="campoPalpite">Digite seu palpite: </label><input type="text" id="campoPalpite" class="campoPalpite">
+<input type="submit" value="Enviar palpite" class="envioPalpite">
+
 </body>
 </html>
